--- a/Tribute.html
+++ b/Tribute.html
@@ -45,7 +45,7 @@
           <a href="https://twitter.com/BillGates" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.instagram.com/thisisbillgates/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
               <a href="https://www.linkedin.com/in/williamhgates/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <p>coded by <a target="_blank" href="https://github.com/carolinass">carolinass</a></p>
+        <p>coded by <a target="_blank" href="https://github.com/AryaBagde-8/OIBSIP_TASK2.git">AryaBagde</a></p>
       </div>
     </div>
 
